# Calulator-Project-1

./: README.md
advanced-python-calculator/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
advanced-python-calculator/docs/: architecture.md  usage.md
advanced-python-calculator/scripts/: setup_env.sh
advanced-python-calculator/src/: main.py
advanced-python-calculator/src/calculator/: constants.py  core.py  evaluator.py  functions.py  parser.py
advanced-python-calculator/src/services/: history.py  plugin_manager.py  settings.py
advanced-python-calculator/src/ui/: app.py
advanced-python-calculator/src/ui/themes/: default.qss
advanced-python-calculator/src/ui/views/: main_window.py  widgets.py
advanced-python-calculator/src/utils/: decorators.py  logger.py
advanced-python-calculator/tests/: test_core.py  test_parser.py  test_ui.py
