[tool.poetry]
name = "advanced-python-calculator"
version = "0.1.0"
description = "A modern calculator with advanced features and a user-friendly interface."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/advanced-python-calculator"
repository = "https://github.com/yourusername/advanced-python-calculator"
keywords = ["calculator", "python", "gui", "advanced"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"
numpy = "^1.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"