[metadata]
name = advanced-python-calculator
version = 0.1.0
description = A modern calculator application with advanced features and a user-friendly interface.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/advanced-python-calculator
license = MIT

[options]
packages = find:
install_requires =
    PyQt5
    numpy
    scipy

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = src

[coverage:report]
show_missing = True
skip_covered = True
